<resources>
    <string name="app_name">Juz4fun</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>


    <!--common use-->
    <string name="or">或</string>

    <!--network problem-->
    <string name="connection_fail_warning">喂！你斷左線喎（好似係）</string>
    <string name="connection_success_warning">連返線咪幾好！！</string>
    <string name="connection_server_warning">唔好意思，伺服器好繁忙，陣間再試啦！！</string>

    <!-- Login and register-->

    <string name="hint_email">請輸入電郵</string>
    <string name="hint_password">請輸入密碼</string>
    <string name="hint_password_again">請再輸入密碼</string>
    <string name="hint_username">請輸入登入名稱</string>
    <string name="hint_confirmed_password">你輸入的密碼不相符</string>
    <string name="register_success">你會稍後收到電郵，然後請激活你的帳號</string>
    <string name="login_success">登入成功</string>
    <string name="logout_success">登出成功</string>
    <string name="forgot_password_success">我地陣間會寄返個密碼去你個email account</string>
    <string name="title_member_login">會員登入</string>
    <string name="title_member_register">註冊會員</string>
    <string name="login_or">或</string>
    <string name="forgot_password"><u>忘記密碼？</u></string>
    <string name="title_register"><u>註冊</u></string>
    <string name="btn_login">登入</string>
    <string name="btn_register">註冊</string>
    <string name="btn_logout">登出</string>
    <string name="welcome">Welcome</string>
    <string name="btn_facebook_login">BY FACEBOOK</string>
    <string name="btn_email_login">BY EMAIL</string>
    <string name="btn_skip_login">跳過</string>
    <string name="btn_facebook_logout">Log out with FACEBOOK</string>
    <string name="txt_forget_password">你的密碼將會傳送到你的電郵裡</string>

    <!--warning-->
    <string name="login_warning_enter_info">請輸入使用者名稱和密碼</string>
    <string name="login_warning_forget_password_email">請輸入電郵</string>
    <string name="login_warning_forget_password_username">請輸入登入名稱</string>
    <!-- -->

    <!-- Button-->
    <string name="btn_confirm">確定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_submit">提交</string>
    <string name="btn_reset">重設</string>
    <string name="btn_retry">重試</string>
    <!---->

    <!-- facebook key-->
    <string name="facebook_app_id">1591220424465295</string>


    <!-- main page-->
    <string name="main_quit_prompt">提示</string>
    <string name="main_quit_message">真係走喇嘛?</string>
    <string name="main_quit_positive">走啦仲問！</string>
    <string name="main_quit_negative">講笑姐;p</string>
    <string name="main_no_home">太多玩樂啦！比D時間我諗下介紹D咩比你地！</string>

    <!-- Reset password-->
    <string name="reset_password_title">重設密碼</string>


    <!-- companyInfo-->
    <string name="tab_company">概要</string>
    <string name="tab_comment">玩評</string>
    <string name="tab_photo">相片</string>
    <string name="heart_unclicked">已從我的最愛中移除</string>
    <string name="heart_clicked">已加入到我的最愛</string>
    <string name="not_has_score_yet">未有分住</string>
    <string-array name="company_info_cat">
        <item>公司名稱：</item>
        <item>類別：</item>
        <item>地址：</item>
        <item>電話：</item>
        <item>價錢：</item>
        <item>營業時間：</item>
        <item>交通工具：</item>
        <item>電郵：</item>
        <item>描述：</item>
    </string-array>
    <string name="company_info_video_loading">等多陣啦衰鬼!!</string>
    <string name="company_info_viewpager_close">關閉</string>

    <!--Ranking-->
    <string name="ranking_no_ranking">未有排行榜住，你地快D幫D玩樂評分啦！</string>


    <!-- my favourite-->
    <string name="my_favourite_list_delete_warning">真係唔要我？</string>
    <string name="my_favourite_list_no_favourite">你還沒有收藏，快點去收藏吧！</string>

    <!-- media controller-->
    <string name="description">Media Controls</string>

    <!--navigation drawer-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>主頁</item>
        <item>進階搜尋</item>
        <item>排行榜</item>
        <item>最新評論</item>
        <item>我的最愛</item>
        <item>新發現</item>
        <item>設定</item>
    </string-array>


    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/icon_home_page</item>
        <item>@drawable/icon_advance_search</item>
        <item>@drawable/icon_ranking</item>
        <item>@drawable/icon_comment</item>
        <item>@drawable/icon_favourite</item>
        <item>@drawable/icon_discover</item>
        <item>@drawable/icon_setting</item>
    </array>

    <string name="action_refresh">重新整理</string>
    <string name="action_edit">編輯</string>
    <string name="action_search">搜尋</string>
    <string name="action_info">軟體資訊</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!--comment-->
    <string name="comment_no_comment">依家無評論，快D寫第一個評論啦！</string>

    <!--comment detail-->
    <string name="commentDetail_max_score">/5</string>
    <string name="commentDetail_fun">趣味</string>
    <string name="commentDetail_service">服務</string>
    <string name="commentDetail_environment">環境</string>s
    <string name="commentDetail_equipment">設備</string>
    <string name="commentDetail_price">抵玩</string>

    <!--write comment-->
    <string name="writeComment_checklogin1">請</string>
    <string name="writeComment_checklogin2">或</string>
    <string-array name="writeComment_title">
        <item>主題</item>
        <item>內容</item>
        <item>消費(個人)</item>
        <item>整體評分</item>
        <item>詳細評分</item>
    </string-array>

    <string name="writeComment_dialog_title">主題</string>
    <string name="writeComment_dialog_content">內容</string>
    <string name="writeComment_dialog_consumption">消費(個人)</string>
    <string name="writeComment_dialog_overallrating">整體評分</string>
    <string name="writeComment_dialog_detailrating">詳細評分</string>
    <string-array name="writeComment_dialog_rating_detail">
        <item>趣味</item>
        <item>環境</item>
        <item>設備</item>
        <item>抵玩</item>
        <item>服務</item>
    </string-array>
    <string-array name="writeComment_dialog_rating_detail_db">
        <item>interest</item>
        <item>environment</item>
        <item>equipment</item>
        <item>worth</item>
        <item>service</item>
    </string-array>

    <string-array name="writeComment_dialog_rating_overall">
        <item>正評</item>
        <item>一般</item>
        <item>負評</item>
    </string-array>

    <string-array name="writeComment_warning">
        <item>請輸入主題</item>
        <item>請輸入內容</item>
        <item>請輸入消費(個人)</item>
        <item>請輸入整體評分</item>
        <item>請輸入詳細評分</item>
    </string-array>


    <string name="writeComment_submit_success">成功提交</string>

    <!--feedback-->
    <string name="submit_success">提交成功喇！！</string>

    <!-- new found-->
    <string name="newFound_company_name">公司名稱 *</string>
    <string name="newFound_company_tel">公司電話</string>
    <string name="newFound_company_cat">公司類別 *</string>
    <string name="newFound_company_address">公司地址 *</string>
    <string name="newFound_expense">個人平均消費</string>
    <string name="newFound_business_hour_start">開始時間</string>
    <string name="newFound_business_hour_end">結束時間</string>
    <string name="newFound_expense_prompt">簡返個價錢先</string>
    <string-array name="newFound_title">
        <item>公司名稱 *</item>
        <item>公司類別 *</item>
        <item>公司地址</item>
        <item>公司電話</item>
        <item>消費(個人)</item>
        <item>營業時間</item>
    </string-array>

    <string-array name="newFound_warning">
        <item>請輸入公司名稱</item>
        <item>請選擇公司類別</item>
        <item>請輸入公司地址</item>
        <item>請輸入公司電話</item>
        <item>請輸入消費(個人)</item>
        <item>請輸入營業時間</item>
    </string-array>

    <!--Search-->
    <string-array name="advancedSearch_title">
        <item>地域</item>
        <item>地區</item>
        <item>類別</item>
        <item>價錢</item>
    </string-array>

    <string-array name="advancedSearch_warning">
        <item>請選擇地域</item>
        <item>請選擇地區</item>
        <item>請選擇類別</item>
        <item>請選擇價錢</item>
    </string-array>

    <string name="search_no_result">無結果喎！你走啦！我唔想攪大佢！</string>

    <!--feedback-->
    <string-array name="feedback_title">
        <item>主題</item>
        <item>你的電郵</item>
        <item>內容</item>
    </string-array>

    <string-array name="feedback_warning">
        <item>請輸入主題</item>
        <item>請輸入你的電郵</item>
        <item>請輸入內容</item>
    </string-array>

    <!--setting-->
    <string-array name="setting_title">
        <item>我的評論</item>
        <item>有關我們</item>
        <item>提交意見</item>
        <item>版本</item>
    </string-array>
    <string name="setting_login_first">喂！登入左先睇到架！</string>

    <string name="setting_android_version">1.0</string>

    <!--account verified-->
    <string name="account_verified_success_msg">帳戶驗證成功!! 快D去LOGIN啦!!</string>
    <string name="account_verified_failure_msg">帳戶驗證失敗!! 去提交意見同我地講返。</string>


    <!--title-->
    <string name="feedback">提交意見</string>
    <string name="about_us">關於我們</string>
    <string name="home">Juz4fun</string>
    <string name="home2">主頁</string>
    <string name="advance_search">進階搜尋</string>
    <string name="fast_search">快速搜尋</string>
    <string name="advance_search_result">搜尋結果</string>
    <string name="ranking">排行榜</string>
    <string name="latestcomment">最新評論</string>
    <string name="myfavourite">我的最愛</string>
    <string name="newfound">新發現</string>
    <string name="setting">設定</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="forget_password">忘記密碼</string>
    <string name="my_comment">我的評論</string>
    <string name="launchpage">Launch</string>
    <string name="reset_password">重設密碼</string>
    <string name="account_verified">帳戶驗證</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
