<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:text="@string/writeComment_checklogin1"
            android:layout_centerVertical="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:text="@string/btn_login"
            android:layout_toRightOf="@+id/text1"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text2"
            android:text="@string/writeComment_checklogin2"
            android:layout_toRightOf="@+id/login"
            android:layout_centerVertical="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:text="@string/btn_register"
            android:layout_toRightOf="@+id/text2"
            android:layout_centerVertical="true"/>

    </RelativeLayout>



</RelativeLayout>
