<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey_black_light"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_forget_password"
        android:textColor="@color/font_red"
        android:paddingBottom="5dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/font_grey_white"
        android:textColorHint="@color/input_register_hint"
        android:background="@drawable/edittext_edit_text_holo_dark"
        android:textCursorDrawable="@drawable/color_cursor"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_username"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/font_grey_white"
        android:textColorHint="@color/input_register_hint"
        android:background="@drawable/edittext_edit_text_holo_dark"
        android:textCursorDrawable="@drawable/color_cursor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp">
            <Button
                android:layout_height="@dimen/btn_top_height"
                android:layout_width="match_parent"
                android:text="@string/btn_cancel"
                android:id="@+id/btnCancel"
                android:layout_gravity="left"
                android:background="@drawable/btn_actioncell_reset_topbg"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_down_height"
                android:background="@drawable/btn_actioncell_reset_downbg"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <Button
                android:layout_height="@dimen/btn_top_height"
                android:layout_width="match_parent"
                android:text="@string/btn_confirm"
                android:id="@+id/btnComfirm"
                android:layout_gravity="right"
                android:background="@drawable/btn_actioncell_send_topbg"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_down_height"
                android:background="@drawable/btn_actioncell_send_downbg"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
