<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey_black_light"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/font_red"
            android:layout_weight="0.4"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="20dp"
            android:text="@string/title_member_register"
            android:textColor="@color/font_red"
            android:gravity="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.4"
            android:background="@color/font_red"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/font_grey_white"
        android:textColorHint="@color/input_register_hint"
        android:background="@drawable/edittext_edit_text_holo_dark"
        android:textCursorDrawable="@drawable/color_cursor"/>


    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_username"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textCapWords"
        android:textColor="@color/font_grey_white"
        android:textColorHint="@color/input_register_hint"
        android:background="@drawable/edittext_edit_text_holo_dark"
        android:textCursorDrawable="@drawable/color_cursor"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/font_grey_white"
        android:textColorHint="@color/input_register_hint"
        android:background="@drawable/edittext_edit_text_holo_dark"
        android:textCursorDrawable="@drawable/color_cursor"/>

    <EditText
        android:id="@+id/confirmed_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/font_grey_white"
        android:textColorHint="@color/input_register_hint"
        android:background="@drawable/edittext_edit_text_holo_dark"
        android:textCursorDrawable="@drawable/color_cursor"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="bottom">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/action_cell_cancel"
            android:text="@string/btn_cancel"
            android:textColor="@color/font_white"
            android:layout_weight="0.50"
            android:layout_gravity="bottom"
            android:layout_marginRight="3dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/action_cell_login"
            android:text="@string/btn_login"
            android:textColor="@color/font_white"
            android:layout_weight="0.50" />

    </LinearLayout>

</LinearLayout>
