<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_grey_black_light"
    android:padding="10dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/font_red"
            android:layout_weight="0.4"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="20dp"
            android:text="@string/reset_password_title"
            android:textColor="@color/font_red"
            android:gravity="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.4"
            android:background="@color/font_red"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:maxLines="1"
            android:id="@+id/password"
            android:hint="@string/hint_password"
            android:textColor="@color/font_grey_white"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edittext_edit_text_holo_dark"
            android:textCursorDrawable="@drawable/color_cursor" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:maxLines="1"
            android:id="@+id/confirmed_password"
            android:hint="@string/hint_password_again"
            android:textColor="@color/font_grey_white"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edittext_edit_text_holo_dark"
            android:textCursorDrawable="@drawable/color_cursor" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp">
            <Button
                android:layout_height="@dimen/btn_top_height"
                android:layout_width="match_parent"
                android:text="@string/btn_cancel"
                android:id="@+id/btnCancel"
                android:layout_gravity="left"
                android:background="@drawable/btn_actioncell_reset_topbg"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_down_height"
                android:background="@drawable/btn_actioncell_reset_downbg"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <Button
                android:layout_height="@dimen/btn_top_height"
                android:layout_width="match_parent"
                android:text="@string/btn_confirm"
                android:id="@+id/btnComfirm"
                android:layout_gravity="right"
                android:background="@drawable/btn_actioncell_send_topbg"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_down_height"
                android:background="@drawable/btn_actioncell_send_downbg"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
